<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parking_se_fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jiangheng02@saicmotor.com">igs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <depend>cem_interfaces</depend> 
  <depend>f100c_msgs</depend>
  <depend>loc_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>fdr_msgs</depend>
  
  <depend>vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>mpc_prk_msgs</depend>
  <depend>cem_park_msgs</depend>
  <depend>parameter_info_msgs</depend>
  <depend>uss_msgs</depend>
  <depend>debug_msgs</depend>
</package>

